--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -8,20 +8,26 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
 
-      - name: Generate the snake
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Generate custom snake
         uses: Platane/snk@v3
         with:
           github_user_name: moses15glx
           outputs: dist/snake.svg
 
-      - name: Push snake animation to the output branch
-        uses: crazy-max/ghaction-github-pages@v3
+          # 🔥 Personalização:
+          color_snake: "#00A2FF"        # Cobrinha azul
+          color_path: "#005C99"         # Rastro azul escuro
+          color_dots: "#00FF00"         # Commits verdes
+          color_back: "#000000"         # Fundo preto
+          hide_progress_bar: true       # Remove barra de progresso
+
+      - name: Push snake to output branch
+        uses: EndBug/add-and-commit@v9
         with:
-          target_branch: output
-          build_dir: dist
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          add: "dist/*.svg"
+          message: "Update custom snake"
