--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,1 +1,33 @@
+name: Generate Snake
+
+on:
+  schedule:
+    - cron: "0 */12 * * *"
+  workflow_dispatch:
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Generate Snake
+        uses: Platane/snk@v3
+        with:
+          github_user_name: moses15glx
+          outputs: dist/snake.svg
+          
+          # tema que deixa o fundo dos quadrados preto
+          palette: "dark"
+          
+          # cor da cobrinha (isso funciona!)
+          color_snake: "#00A2FF"
+
+      - name: Push Snake
+        uses: EndBug/add-and-commit@v9
+        with:
+          add: "dist/*.svg"
+          message: "Update snake"
 
